nodejs/public/css/chat.css
.main #content{
	position:fixed;
	top:45px;
	bottom:2em;
	left:0px;
	right:181px;
	overflow: hidden;
}

.main #content.hide_userlist{
	right:0;
}

.main #input{
	position:absolute;
	bottom:0;
	left:0;
	right:0;
	border-top: solid 1px #ccc;
	border-right: solid 1px #ccc;
	background-color:#EF6F2F;
	height:3.4em;
}

.main #input .container{
	position:absolute;
	top:4px;
	left:10.4em;
	bottom:12px;
	right:18px;
	overflow:visible;
}

.main #input #own_name {
	position:absolute;
	width:9.5em;
	padding:.9em .4em 0 .4em;
	color:white;
}

#input #message{
	background-color:#fff;
}

#input #message,
#input #input_overlay{
	display:block;
	border-radius:10px;
	padding:4px 7px;	
	font-size:1em;
	position:absolute;
	top:0;
	left:0;
	height:100%;
	width:100%;
}

#input #input_overlay{
	color:#888;
	background-color: #f0f0f0;
}

a.try_now{
	display:none;
}

.main #messages{
	padding-bottom:0px;
	overflow: hidden;
	position:absolute;
	top:0;
	left:0;
	right:0px;
	bottom:3.4em;
	background-color:#f7f7f7;
}

#messages_scroller{
	position:absolute;
	width:100%;
	max-height:100%;
	overflow-y:auto;
	bottom: 0px;
}

#message_list {
	width: 100%;
	margin-bottom:0.2em;
}

#message_list.hide_system .line.system {
	display:none;
}

.line td{
	padding-top:0;
	padding-bottom:.2em;
}

tr.first {
	background: left 0.1em repeat-x data-url(/images/chat/line_back.png);
}

tr.first td {
	padding-top:0.7em;
}

td.name {
	width: 10em;
	padding-right: 10px;
	text-align:right;
	color: black;
	font-weight:bold;
}

.msg {
	padding-bottom:0.2em;	
}

